<resources>
    <string name="app_name">+Vida</string>
    <string name="tipo_sangue">Tipo Sanguíneo</string>
    <string name="nomedoador">Nome Completo </string>
    <string name="eml">E-mail</string>
    <string name="email">Nome de usuário</string>
    <string name="f_pass">Esqueceu a senha?</string>
    <string name="apelidodoador">Nome </string>
    <string name="pergunta">Não tem uma conta?</string>
    <string name="criar_conta">Crie uma</string>
    <string name="sexo">Sexo:</string>
    <string name="sangue">Grupo Sanguíneo</string>
    <string name="uP">Unidade Mais Próxima</string>
    <string name="foto_perfil">Foto de Perfil</string>
    <string name="texto">Um gesto de cidadania e humanismo. Uma acção que pode ajudar a salvar vidas.
    </string>
    <string name="doacao">Doação</string>
    <string name="logo">Logotipo</string>
    <string name="disponibilidade">Disponibilidade para doar:</string>
    <string name="Contacto">Contacto Telefónico</string>
    <string name="photo_perfil">Seleccione a foto de perfil</string>

    <string name="seguinte">Seguinte</string>

    <string name="prov">Províncias</string>
    <string name="resgistado_com_sucesso">Registado com sucesso</string>

    <!--Province-->
    <string-array name="provincias">
        <item>Província</item>
        <item>Cabo Delgado</item>
        <item>Gaza</item>
        <item>Inhambane</item>
        <item>Maníca</item>
        <item>Maputo</item>
        <item>Maputo Cidade</item>
        <item>Nampula</item>
        <item>Niassa</item>
        <item>Sofala</item>
        <item>Tete</item>
        <item>Zambézia</item>
    </string-array>
    <!--Switchs Buttons-->
    <array name="switch_tabs">
        <item>Doador</item>
        <item>Requisitante</item>
    </array>


    <array name="switch_nav">
        <item>Anúnciar</item>
        <item>Meus anúncios</item>
    </array>

    <array name="switch_sangue">
        <item>A+</item>
        <item>B+</item>
        <item>AB+</item>
        <item>O+</item>
        <item>A-</item>
        <item>B-</item>
        <item>AB-</item>
        <item>O-</item>
    </array>


    <string name="not_log_in">Não se pode iniciar sessão</string>
    <string name="not_firebase_auth">Não se pode autenticar com Firebase</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_up">Regista-se</string>
    <string name="action_sign">Entrar</string>
    <string name="confirm_senha">Confirme a senha</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">A senha deve ter tamanho mínimo 8 </string>
    <string name="error_incorrect_password">Esta senha é incorrecta</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="registar">Registar</string>
    <string name="outro">Outro</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="enviar_requisi_o">Redefinir a senha</string>
    <string name="logotipo">Logotipo</string>
    <string name="entrar">Entrar</string>
    <string name="palavra_doacao">Doação</string>
    <string name="redifinicao_senha">Nós precisamos do seu e-mail de registro para enviar as instruções de redefinição de senha</string>


    <string name="redefinir_senha">Redefinir senha</string>
    <string name="texto_redifinir_senha">Digite a sua senha abaixo, estamos apenas sendo mais seguros</string>
    <string name="newPassword">Nova senha</string>

    <string name="email_verification">Consulte a sua caixa de email para confirmar</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="meu_perfil">Meu Perfil</string>
    <string name="sobre">Sobre</string>
    <string name="anunciar">Anunciar</string>
    <string name="pesquisa">Pesquisar</string>
    <string name="informa_o_pesoal">Informação Pessoal</string>
    <string name="endereco">Endereço</string>
    <string name="editar">Editar</string>

    <string name="new_notification_title_template">New: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="new_notification_placeholder_text_template">You said %1$s and lorem ipsum dolor
        sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel semper
        venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis. Pellentesque
        vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper ornare lacus. Duis
        ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis viverra rhoncus sit amet
        nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec tortor.
    </string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
</resources>
