<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/md_white_1000"
    android:padding="10dp"
    tools:context="mz.co.vida.MainActivity"
    android:orientation="vertical">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"        >

        <ImageView
            android:layout_width="299dp"
            android:layout_height="159dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/ic_balloons" />

        <TextView
            android:contentDescription="@string/doacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:textSize="35sp"
            android:textStyle="normal"
            android:textColor="@color/vermelho_padrao"
            android:fontFamily="@font/product"
            android:text="@string/palavra_doacao"/>

        <com.codesgood.views.JustifiedTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:textAlignment="center"
            android:fontFamily="@font/product_r"
            android:padding="0.5sp"
            android:text="@string/texto"
            android:textColor="@color/md_black_1000"
            android:textSize="18sp" />

      <!--  <com.google.android.gms.common.SignInButton-->
          <!--  android:id="@+id/signInButton"-->
           <!-- android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_gravity="center"-->
            <!--android:layout_marginTop="100dp" />-->
        <Button
            android:id="@+id/bt"
            android:layout_width="20dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_next_1" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/product_r"
            android:text="@string/seguinte"
            android:textColor="@color/md_black_1000"
            android:textSize="18sp"
            android:layout_gravity="center"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        />

</android.support.constraint.ConstraintLayout>