<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_white_1000"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/foto_perfil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo" />

    <EditText
        android:id="@+id/et_user"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/et"
        android:ems="10"
        android:fontFamily="@font/product_r"
        android:hint="@string/email"
        android:backgroundTint="#e9e9e9"
        android:inputType="textEmailAddress"
        android:paddingStart="30dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.366"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="RtlCompat" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Lembrar de mim"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/et"
        android:backgroundTint="#e9e9e9"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/product_r"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:paddingStart="30dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_user"
        tools:ignore="RtlCompat" />

    <Button
        android:id="@+id/bt_forgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/fui_transparent"
        android:fontFamily="@font/product_r"
        android:shadowColor="@color/fui_transparent"
        android:text="@string/f_pass"
        android:textAllCaps="false"
        android:textColor="@color/vermelho_padrao"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_signUp" />

    <Button
        android:id="@+id/btn_entrar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/btn_shape"
        android:drawablePadding="20dp"
        android:fontFamily="@font/product_r"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:shadowColor="@color/fui_transparent"
        android:text="@string/action_sign"
        android:textAllCaps="false"
        android:textColor="@color/md_white_1000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButton">

    </Button>

    <Button
        android:id="@+id/bt_signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/et"
        android:fontFamily="@font/product_r"
        android:text="@string/criar_conta"
        android:textAllCaps="false"
        android:textColor="#ff1c1c"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_entrar" />

</android.support.constraint.ConstraintLayout>