<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:fancy="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/md_white_1000"
              android:gravity="center"
              android:orientation="vertical"
              tools:context=".activities.RegistoActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <Button
                android:id="@+id/voltar_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginTop="10dp"
                android:text="Login"
                android:textSize="18sp"
                android:textColor="@color/vermelho_padrao"
                android:textAllCaps="false"
                android:drawableTint="@color/vermelho_padrao"
                android:background="@color/fui_transparent"
                android:drawableStart="@drawable/ic_back" />

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_user"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                app:civ_border_color="@color/fui_transparent"
                tools:ignore="VectorDrawableCompat" />

            <lib.kingja.switchbutton.SwitchMultiButton
                android:id="@+id/switch_mult_estado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                fancy:selectedColor="@color/vermelho_padrao"
                fancy:selectedTab="-1"
                fancy:strokeRadius="7dp"
                fancy:switchTabs="@array/switch_tabs"
                fancy:textSize="14sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <EditText
                    android:id="@+id/et_nome"
                    android:layout_width="170dp"
                    android:layout_height="35dp"
                    android:background="@drawable/et"
                    android:backgroundTint="#e9e9e9"
                    android:ems="10"
                    android:fontFamily="@font/product_r"
                    android:hint="@string/nomedoador"
                    android:inputType="textPersonName"
                    android:paddingStart="20dp"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/et_mail"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/et"
                    android:backgroundTint="#e9e9e9"
                    android:ems="10"

                    android:fontFamily="@font/product_r"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingStart="20dp"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/et_Phone"
                    android:layout_width="170dp"
                    android:layout_height="35dp"
                    android:background="@drawable/et"
                    android:backgroundTint="#e9e9e9"
                    android:paddingStart="20dp"
                    android:maxLength="9"
                    android:fontFamily="@font/product_r"
                    android:hint="@string/contacto"
                    android:inputType="phone"
                    android:textSize="15sp"
                    android:paddingEnd="0dp"/>

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:background="@drawable/et"
                    android:backgroundTint="#e9e9e9"
                    android:paddingStart="20dp"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/product_r"
                    android:textSize="15sp"
                    android:ems="10"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/et_passwordConfirm"
                    android:layout_width="173dp"
                    android:layout_height="35dp"
                    android:background="@drawable/et"
                    android:backgroundTint="#e9e9e9"
                    android:ems="10"
                    android:fontFamily="@font/product_r"
                    android:hint="@string/confirm_senha"
                    android:inputType="textPassword"
                    android:textSize="15sp"
                    android:paddingStart="20dp"
                    android:paddingEnd="0dp"/>

                <Spinner
                    android:id="@+id/sp_provincias"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/et"
                    android:backgroundTint="#e9e9e9"
                    android:ems="10"
                    android:entries="@array/provincias"
                    android:fontFamily="@font/product_r"
                    android:inputType="text"
                    android:padding="7dp"
                    android:paddingEnd="0dp"
                    android:paddingStart="10dp"
                    android:prompt="@string/prov"
                    android:textSize="15sp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sexo"
                android:textSize="15sp"
                android:textColor="@color/md_black_1000"
                android:layout_marginTop="10dp"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_femenino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/femenino"
                    android:textSize="15sp"
                    android:theme="@style/SCBSwitch"
                    android:fontFamily="@font/product_r"
                    android:layout_marginEnd="10dp" />

                <RadioButton
                    android:id="@+id/rb_masculino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/masculino"
                    android:textSize="15sp"
                    android:theme="@style/SCBSwitch"
                    android:fontFamily="@font/product_r"
                    android:layout_marginEnd="10dp" />
                <RadioButton
                    android:id="@+id/rb_outro"
                    android:textSize="15sp"
                    android:theme="@style/SCBSwitch"
                    android:fontFamily="@font/product_r"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/outro" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:layout_marginTop="5dp"
                android:textColor="@color/md_black_1000"
                android:fontFamily="@font/product_r"
                android:text="@string/sangue" />

            <lib.kingja.switchbutton.SwitchMultiButton
                android:id="@+id/bt_MultiSangue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                fancy:selectedColor="@color/vermelho_padrao"
                fancy:selectedTab="-1"
                fancy:strokeRadius="8dp"
                fancy:strokeWidth="1dp"
                fancy:switchTabs="@array/switch_sangue"
                fancy:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/md_black_1000"
                android:fontFamily="@font/product_r"
                android:text="@string/disponibilidade"
                android:textSize="15sp" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp">

                <Switch
                    android:id="@+id/stc_disponibilidade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:theme="@style/SCBSwitch"
                    android:checked="false"
                    android:layout_marginEnd="10dp" />

                <EditText
                    android:id="@+id/et_UnidadeProx"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:background="@drawable/et"
                    android:backgroundTint="#e9e9e9"
                    android:paddingStart="20dp"
                    android:ems="10"
                    android:fontFamily="@font/product_r"
                    android:hint="@string/uP"
                    android:inputType="text"
                    android:textSize="15sp"
                    android:paddingEnd="0dp"/>
            </LinearLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_resgistar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:fontFamily="@font/product_r"
                android:background="@drawable/btn_shape"
                android:textColor="@color/md_white_1000"
                android:text="@string/registar"
                android:layout_marginBottom="10dp"
                android:textAllCaps="false"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
