<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_white_1000"
    android:orientation="vertical"
    tools:context=".activities.Profile_UpdadeActivity">

    <Button
        android:id="@+id/bt_back_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="20dp"
        android:textSize="18sp"
        android:textColor="@color/vermelho_padrao"
        android:textAllCaps="false"
        android:background="@color/fui_transparent"
        android:drawableStart="@drawable/ic_arrow_back_red_24dp" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image__update"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_user"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                app:civ_border_color="@color/fui_transparent"
                tools:ignore="VectorDrawableCompat" />

            <lib.kingja.switchbutton.SwitchMultiButton
                android:id="@+id/switch_mult_estado_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                fancy:selectedColor="@color/vermelho_padrao"
                fancy:selectedTab="-1"
                fancy:strokeRadius="5dp"
                fancy:switchTabs="@array/switch_tabs"
                fancy:textSize="14sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/et_phone_update"
                    android:layout_width="180dp"
                    android:layout_height="35dp"
                    android:background="@drawable/et"
                    android:backgroundTint="@color/gray"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:maxLength="9"
                    android:padding="7dp"
                    android:fontFamily="@font/product_r"
                    android:hint="@string/contacto"
                    android:inputType="phone"
                    android:textSize="15sp"/>

                <Spinner
                    android:id="@+id/sp_provincias_update"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/et"
                    android:backgroundTint="@color/gray"
                    android:ems="10"
                    android:entries="@array/provincias"
                    android:fontFamily="@font/product_r"
                    android:inputType="text"
                    android:padding="7dp"
                    android:paddingEnd="0dp"
                    android:paddingStart="10dp"
                    android:prompt="@string/prov"
                    android:textSize="15sp" />

            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sexo"
                android:textSize="15sp"
                android:textColor="@color/md_black_1000"
                android:layout_marginTop="10dp"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_femenino_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/femenino"
                    android:textSize="15sp"
                    android:theme="@style/SCBSwitch"
                    android:fontFamily="@font/product_r"
                    android:layout_marginEnd="10dp" />

                <RadioButton
                    android:id="@+id/rb_masculino_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/masculino"
                    android:textSize="15sp"
                    android:theme="@style/SCBSwitch"
                    android:fontFamily="@font/product_r"
                    android:layout_marginEnd="10dp" />
                <RadioButton
                    android:id="@+id/rb_outro_update"
                    android:textSize="15sp"
                    android:theme="@style/SCBSwitch"
                    android:fontFamily="@font/product_r"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/outro" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColor="@color/md_black_1000"
                android:fontFamily="@font/product_r"
                android:text="@string/disponibilidade"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">


                <com.github.angads25.toggle.widget.LabeledSwitch
                    android:id="@+id/stc_disponibilidade_update"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:baselineAligned="false"
                    android:textSize="14sp"
                    app:colorBorder="@color/vermelho_padrao"
                    app:colorOn="@color/vermelho_padrao"
                    app:on="false"
                    app:textOff="NÃO"
                    android:layout_marginEnd="5dp"
                    app:textOn="SIM" />

                <EditText
                    android:id="@+id/et_unidadeProx_update"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/et"
                    android:backgroundTint="@color/gray"
                    android:ems="10"
                    android:fontFamily="@font/product_r"
                    android:hint="@string/uP"
                    android:inputType="text"
                    android:paddingStart="20dp"
                    android:paddingEnd="0dp"
                    android:textSize="15sp" />
            </LinearLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:fontFamily="@font/product_r"
                android:background="@drawable/btn_shape"
                android:textColor="@color/md_white_1000"
                android:text="Actualizar"
                android:layout_marginBottom="10dp"
                android:textAllCaps="false"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
